--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,28 @@
     transform: rotate(360deg);
   }
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+
+
+::-webkit-scrollbar-track {
+  background-color: #d2d3d4;
+}
+
+
+
+::-webkit-scrollbar-thumb {
+  border-radius: 15px;
+  width: 10px;
+  background-color: rgb(67, 67, 67);
+  border: 1px solid rgb(145, 143, 143);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  transform: translateX(10px); /* Adjust the distance the thumb should move on hover */
+  transition: transform 2s ease; /* Adjust the duration and timing function */
+}
