--- a/src/layout/skillwillHomework13/homeworkk13.css
+++ b/src/layout/skillwillHomework13/homeworkk13.css
@@ -72,8 +72,52 @@ align-items: center;
     margin-bottom: 10px;
     border-radius: 10px;
     margin: 10px;
+    align-items: center;
+    padding-right: 30px;
 }
 
 .list h2 {
     text-align: center;
 }
+
+
+
+
+
+
+
+
+.incomplateTasks {
+    list-style: none;
+    padding:15px;
+    height: auto;
+    min-height: 35px;
+    border: 2px solid rgb(221, 221, 221);
+    border-left: 10px solid brown;
+    
+}
+
+.startedTasks {
+    list-style: none;
+    padding:15px;
+    height: auto;
+    min-height: 35px;
+    border: 2px solid rgb(221, 221, 221);
+    border-left: 10px solid green;
+}
+
+
+
+.complatedTasks {
+    list-style: none;
+    padding:15px;
+    height: auto;
+    min-height: 35px;
+    border: 2px solid rgb(221, 221, 221);
+    border-left: 10px solid white;
+}
+
+
+
+
+
